--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2018",
-    "module": "CommonJS",
+    "module": "Node16",
     "moduleResolution": "NodeNext",
     "experimentalDecorators": true,
     "allowJs": false,
